--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,5 +1,13 @@
 <div class="footer flex">
   <div></div>
-  <div class="flex"></div>
+  <div class="flex">
+    <ul class="flex">
+      <li class="flex">
+        <h3>
+          Productivv.
+        </h3>
+      </li>
+    </ul>
+  </div>
   <div></div>
 </div>
