--- a/src/app/company/company.component.css
+++ b/src/app/company/company.component.css
@@ -1,10 +1,10 @@
 .primary {
   width: 100vw;
-  height: 800px;
+  height: 600px;
   color: #fff;
   align-items: center;
-  background-size: contain;
-  background-image: url("https://pixabay.com/get/57e9d6414e54aa14f6d1867dda6d49214b6ac3e456577740772e7fd796/food-1932466_1920.jpg");
+  background-size: cover;
+  background-image: url("https://pixabay.com/get/57e5d7414c5aac14f6d1867dda6d367d133cdde656576c48702973d19249c758be/apricots-1522680_1920.jpg");
 }
 
 .primary h1 {
