--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -6,3 +6,25 @@
   height: 400px;
   grid-template-columns: auto 85% auto;
 }
+
+ul {
+  margin: 0;
+  padding: 0;
+}
+ul li {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+h3 {
+  white-space: nowrap;
+  font: 500 20px/32px Roboto, "Helvetica Neue", sans-serif;
+  margin: 0 10px;
+  color: var(--gray);
+  font-size: 42px;
+  font-weight: 100;
+  align-self: center;
+
+  font-family: "Dancing Script", cursive;
+}
