--- a/src/app/company/company.component.css
+++ b/src/app/company/company.component.css
@@ -5,6 +5,7 @@
   align-items: center;
   background-size: cover;
   background-image: url("https://pixabay.com/get/57e5d7414c5aac14f6d1867dda6d367d133cdde656576c48702973d19249c758be/apricots-1522680_1920.jpg");
+  background-color: blanchedalmond;
 }
 
 .primary h1 {
